--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ function showSlides() {
     <div class="card">
       <img src="https://cdn.pixabay.com/photo/2018/03/14/18/47/mother-teresa-3226014_960_720.png" width=80%";>
 	<p style="text-align:center;">
-<a href="C:\Users\User\Desktop\Mother Teresa\a_files\biography.html">BIOGRAPHY</a></p>
+<a href="biography.html">BIOGRAPHY</a></p>
     </div>
 
   </div><div class="row">
