--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ function showSlides() {
   <div class="column">
     <div class="card">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlDce_Sb5oID7mY97laq_iDmQSYEiA8UqoLAmzsxq_k9weaXXXg1g5RCocht-vw-0caps&usqp=CAU" width=60%">
-	<p><a href="C:\Users\User\Desktop\Mother Teresa\a_files\gallery.html">GALLERY</a></p>
+	<p><a href="gallery.html">GALLERY</a></p>
 </div>
 </div>  
 </div>
