--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ function showSlides() {
   <div class="column">
     <div class="card">
       <img src="https://smallimg.pngkey.com/png/small/17-172108_india-map-outline-png-image-free-stock-india.png" width=50%";>
-	<p><a href="C:\Users\User\Desktop\teresa\inindia.html">IN INDIA</a></p>
+	<p><a href="inindia.html">IN INDIA</a></p>
     </div>
   </div>
 <div class="row">
