--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ padding:50px;
   <div class="header-right">
 <a href="wweb.html">HOME</a>
 <a href="#C1">ABOUT</a>
-	<a href="C:\Users\User\Desktop\teresa\login.html">LOGIN</a>
+	<a href="login.html">LOGIN</a>
 	<a href="#C4">CONTACT</a>
 </div>
 </div>
