--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ function showSlides() {
   <div class="column">
     <div class="card">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgQl-Z0OSY6OadMZYGY2Cqn4gRJHaG6wRjaNpzVBAvvY8-wjBRLfRl1eDg-lijHnjTRwc&usqp=CAU" width=50%">
-<p><a href="C:\Users\User\Desktop\teresa\quotes.html">QUOTES</a></p>
+<p><a href="quotes.html">QUOTES</a></p>
 </div>
 </div>
 <div class="row">
