--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ function showSlides() {
   <div class="column">
     <div class="card">
       <img src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQm48W2uh8Y22nELSuNaENB-bqb-dUaUgF2C0zPPnnnPEVubi3Ka_vzP2-K-s9rou1_-pk&usqp=CAU" width=65%">
-	<p><a href="C:\Users\User\Des>AWARDS</a></p>
+	<p><a href="awards.html">AWARDS</a></p>
 </div>
 </div>
 <div class="row">
