--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ padding:50px;
 <div class="header">
   <a href="#default" class="logo">MOTHER TERESA</a>
   <div class="header-right">
-<a href="wweb.html">HOME</a>
+<a href="#C1">HOME</a>
 <a href="#C1">ABOUT</a>
 	<a href="login.html">LOGIN</a>
 	<a href="#C4">CONTACT</a>
@@ -266,21 +266,21 @@ function showSlides() {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQm48W2uh8Y22nELSuNaENB-bqb-dUaUgF2C0zPPnnnPEVubi3Ka_vzP2-K-s9rou1_-pk&usqp=CAU" width=65%">
+      <img src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQm48W2uh8Y22nELSuNaENB-bqb-dUaUgF2C0zPPnnnPEVubi3Ka_vzP2-K-s9rou1_-pk&usqp=CAU" width=65%";>
 	<p><a href="awards.html">AWARDS</a></p>
 </div>
 </div>
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgQl-Z0OSY6OadMZYGY2Cqn4gRJHaG6wRjaNpzVBAvvY8-wjBRLfRl1eDg-lijHnjTRwc&usqp=CAU" width=50%">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgQl-Z0OSY6OadMZYGY2Cqn4gRJHaG6wRjaNpzVBAvvY8-wjBRLfRl1eDg-lijHnjTRwc&usqp=CAU" width=50%";>
 <p><a href="quotes.html">QUOTES</a></p>
 </div>
 </div>
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlDce_Sb5oID7mY97laq_iDmQSYEiA8UqoLAmzsxq_k9weaXXXg1g5RCocht-vw-0caps&usqp=CAU" width=60%">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlDce_Sb5oID7mY97laq_iDmQSYEiA8UqoLAmzsxq_k9weaXXXg1g5RCocht-vw-0caps&usqp=CAU" width=60%";>
 	<p><a href="gallery.html">GALLERY</a></p>
 </div>
 </div>  
