--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@ span.psw {
     <input type="password" placeholder="Enter Password" name="psw" required>
         
     <button type="submit"><a href="C:\Users\User\Desktop\teresa\submit.html">Login</a></button>
-<a href="C:\Users\User\Desktop\teresa\submit.html"></a>
+<a href=submit.html></a>
 
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
