--- a/submit.html
+++ b/submit.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <h2 style="text-align:center;">YOU ARE NOT REGISTERED</h2>
 <br>
-<a href="C:\Users\User\Desktop\teresa\register.html">REGISTER HERE</a>
+<a href="register.html">REGISTER HERE</a>
 </head>
 </body>
 </html>
