--- a/register.html
+++ b/register.html
@@ -81,13 +81,13 @@ a {
     <hr>
     
     <button type="submit" class="registerbtn"><a href="C:\Users\User\Desktop\teresa\success.html">Register</a></button>
-	<a href="C:\Users\User\Desktop\teresa\success.html"></a>
+	<a href="success.html"></a>
 
 	
   </div>
   
   <div class="container signin">
-    <p>Already have an account? <a href="C:\Users\User\Desktop\teresa\login.html">LOGIN</a>.</p>
+    <p>Already have an account? <a href="login.html">LOGIN</a>.</p>
   </div>
 </form>
 
