--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@ span.psw {
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
         
-    <button type="submit"><a href="C:\Users\User\Desktop\teresa\submit.html">Login</a></button>
+    <button type="submit"><a href="submit.html">Login</a></button>
 <a href=submit.html></a>
 
     <label>
