--- a/register.html
+++ b/register.html
@@ -80,7 +80,7 @@ a {
     <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
     <hr>
     
-    <button type="submit" class="registerbtn"><a href="C:\Users\User\Desktop\teresa\success.html">Register</a></button>
+    <button type="submit" class="registerbtn"><a href="success.html">Register</a></button>
 	<a href="success.html"></a>
 
 	
