--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@ input[type=submit]:hover {
     </div>
     <div class="row">
       <input type="submit" value="Submit">
+					 <a href="success.html"></a>
     </div>
   </form>
 </div>
@@ -420,7 +421,7 @@ input[type=submit]:hover {
 </div>
 
 <div class="footer1">
-<p>mother teresa.@all right reserved.</p>
+<p>A tribute to mother teresa.@all right reserved.</p>
 </foote>
 </div>
 
