--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ function showSlides() {
 }
 </script>
 
-<h2 style="text-align:center; color:#10559b; id="C1";>MOTHER TERESA-AN INSPIRATION TO ALL</h2><div class="row"><style>
+<h2 style="text-align:center; color:#10559b; id="C1";>MOTHER TERESA-"The Saint of the Gutters"</h2><div class="row"><style>
 <style>
 * {
   box-sizing: border-box;
