--- a/index.html
+++ b/index.html
@@ -404,8 +404,7 @@ input[type=submit]:hover {
       </div>
     </div>
     <div class="row">
-      <input type="submit" value="Submit">
-					 <a href="success.html"></a>
+      <input type="submit"> <a href="success.html"></a>
     </div>
   </form>
 </div>
