--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ input[type=submit]:hover {
       </div>
     </div>
     <div class="row">
-      <input type="submit"> <a href="success.html"></a>
+       <a href="success.html"></a>
     </div>
   </form>
 </div>
