--- a/biography.html
+++ b/biography.html
@@ -41,8 +41,8 @@ Teresa took her solemn vows on 14 May 1937 while she was a teacher at the Loreto
 In 1946, during a visit to Darjeeling by train, Mother Teresa felt that she heard the call of her inner conscience to serve the poor of India for Jesus. She asked for and received permission to leave the school. In 1950, she founded the Missionaries of Charity, choosing a white sari with two blue borders as the order's habit.
 <br>
 <h3>
-Missionaries of Charity</h>
-Main article: Missionaries of Charity
+Missionaries of Charity</h3>
+<p>
 
 On 10 September 1946, Teresa experienced what she later described as "the call within the call" when she travelled by train to the Loreto convent in Darjeeling from Calcutta for her annual retreat. "I was to leave the convent and help the poor while living among them. It was an order. To fail would have been to break the faith."[35] Joseph Langford later wrote, "Though no one knew it at the time, Sister Teresa had just become Mother Teresa".[36]
 
